updated profile pic

--- a/_posts/2023-01-12-IAIA-CS.md
+++ b/_posts/2023-01-12-IAIA-CS.md
@@ -38,9 +38,7 @@ The state-of-the-art conversational AI models that use the revolutionary large l
 ![System-design]({{page.images | relative_url}}/system-design.png){:width="90%"}
 *General system modules overview*
 
-
-I can definitely incorporate that information into your blog! Here's the improved version with the datasets and data generation sections included:
-
+The ParlAI framework powers our conversational search model, which is built with a shared encoder, multiple decoders, a dialogue manager, and a search engine. The encoder processes input, creating hidden states that the decoders use to generate task-specific outputs. The dialogue manager and search engine work together to create meaningful, user-friendly dialogues and search results. This robust architecture, depicted as a combination of agents in the ParlAI framework, provides a powerful and intuitive conversational search experience.
 
 ## Datasets and Data Generation
 
