added discussion to IAIA-CS

--- a/_posts/2023-01-12-IAIA-CS.md
+++ b/_posts/2023-01-12-IAIA-CS.md
@@ -298,9 +298,12 @@ We compared our model's performance with two state-of-the-art internet-augmented
 ### Observations
 - Our model surpasses the state-of-the-art models in precision, f1 score, and perplexity.
 - Our BLEU-1 and BLEU-2 scores are superior to those of Blenderbot 2 and Seeker.
-- Our ROUGE-1 score is higher than both, but the ROUGE-2 score is slightly lower. However, our ROUGE-L score is higher.
 - The DHGT-based dialogue summarization model underperforms by approximately 30% across all metrics, possibly due to shorter dialogues.
 
 
 ### Discussion
 Our model's superior performance is attributed to its fine-tuning for ambiguous user queries and the dataset's focus on convAI3, which targets ambiguous user queries. Blenderbot 2 emphasizes casual conversations, while Seeker prioritizes relevant results without questioning user intent, resulting in inferior performance with ambiguous queries.
+
+Knowledge graphs and heterogeneous graph transformers are emerging technologies with untapped potential in conversational search models. Short dialogues may not benefit from DHGT-based summarization due to context and intent capture challenges. Performance of these models is data-dependent and expected to improve with more data and larger model size. Future work will focus on data incorporation and DHGT model refinement.
+
+On the other hand, utilizing synthetic data generation techniques to expand the training dataset has proven to be an effective strategy for enhancing the model's understanding of ambiguous user queries. This approach has significantly improved the model's performance across various metrics, demonstrating its potential to revolutionize conversational search systems.
